src/pages/ru/v1.18.0/sdk/constructor.mdx
---
title: "JavaScript SDK - Инициализация SDK"
metaTitle: "JavaScript SDK - Инициализация SDK"
metaDescription: "Настройки конфигурации для метода конструктора трекера"
---
import Aside from '~/components/Aside.astro'
import ORCard from '~/components/Card/ORCard.astro'

## Установка

Следующая строка установит трекер и SDK, позволяя вам использовать все функции трекера.

```bash
npm i @openreplay/tracker
```

## Инициализация
При создании экземпляра трекера OpenReplay, вы можете задать несколько параметров конфигурации для настройки многих аспектов записи и процесса записи.

Вы должны установить опцию `projectKey` в конструкторе. Это значение можно получить в вашей панели управления OpenReplay в разделе 'Preferences > Projects'.

<Aside type="tip">
  Обратите внимание, если у вас несколько проектов, вам нужно будет внимательно выбрать ключ проекта.
</Aside>


### Одностраничные приложения (SPA)
Если ваш сайт является **Одностраничным приложением (SPA)**, используйте следующий код:

```js
import OpenReplay from '@openreplay/tracker';
//...
const tracker = new OpenReplay({
  projectKey: PROJECT_KEY
});
tracker.start(); // returns a promise with session info (sessionID, sessionHash, userUUID)
```

### Серверный рендеринг (SSR)
В противном случае, если ваше веб-приложение **Рендерится на сервере (SSR)** (например, NextJS, NuxtJS), используйте следующий фрагмент кода. Убедитесь, что `tracker.start()` вызывается после запуска приложения (в `useEffect` или `componentDidMount`).

```js
import OpenReplay from '@openreplay/tracker/cjs';
//...
const tracker = new OpenReplay({
      projectKey: PROJECT_KEY,
});
//...
function MyApp() {
  useEffect(() => { // use componentDidMount in case of React Class Component
    tracker.start(); // returns a promise with session info (sessionID, sessionHash, userUUID)
  }, [])
}
```

<Aside type="tip">
Если вы используете определенный веб-фреймворк, ознакомьтесь с нашим [разделом Настройки Трекера](/using-or), чтобы узнать, как начать работу.
</Aside>

## Пример

```js
import OpenReplay from '@openreplay/tracker/cjs';
//...
const tracker = new OpenReplay({
      projectKey: PROJECT_KEY,
      ingestPoint: "https://openreplay.mydomain.com/ingest", // when dealing with the self-hosted version of OpenReplay
      capturePerformance: true,
      __DISABLE_SECURE_MODE: true // for local testing
});
```

## Опции Инициализации

Существует набор опций, которые вы можете передать конструктору. Только `projectKey` является обязательным.

### Общего Назначения

- `projectKey: string` ID проекта, который вы отслеживаете.
- `sessionHash?: string` Хеш первоначальной сессии. Это полезно, когда сессии переходят через разные поддомены вашего веб-приложения, но вы хотите объединить их в одну запись. Если продолжение сессии невозможно (она не существует или завершена), трекер автоматически начнет новую. Также возвращается при вызове `stop()`. Больше деталей [здесь](/troubleshooting/session-recordings#replaysarebrokenacrosssubdomains).
- `ingestPoint?: string` Ваш домен OpenReplay (например, https://openreplay.mydomain.com/ingest), на который трекер будет отправлять события. Это необязательно для пользователей OpenReplay Cloud. По умолчанию: `https://api.openreplay.com/ingest` (указывает на OpenReplay Cloud).
- `revID?: string` ID ревизии вашего веб-приложения. Полезно при поиске проблем, возникающих в конкретной версии релиза.
- `resourceBaseHref?: string` Относится к публично доступному домену, откуда активы (стили, шрифты и иконки) могут быть загружены OpenReplay. Поскольку они необходимы для корректного воспроизведения сессии, этот параметр полезен для обхода ограничений, связанных с размещением вашего сайта (и, следовательно, активов) в частном домене. Пример: `https://mypublicsite.com/assets/`.
- `captureIFrames?: boolean` Для захвата всех iFrames одного домена в вашем веб-приложении. Если вы хотите отслеживать конкретный iFrame, просто добавьте HTML-атрибут `data-openreplay-capture` к тегу `<iframe>`. По умолчанию: `true`.
- `disableClickmaps?: boolean` Для отключения вычисления CSS-селекторов (используется в картах кликов). По умолчанию: `false`.
- `verbose?: boolean` Для включения логирования. По умолчанию: `false`.
- `autoResetOnWindowOpen?: boolean` Включите эту опцию для сброса ID сессии при открытии новой вкладки из вашего приложения. Это перезаписывает метод `window.open`, чтобы избежать дублирования ID сессий из-за общего хранения сессий между вкладками браузера. По умолчанию: `false`.
- `forceSingleTab: boolean` Отключает возможность записи в нескольких вкладках, которая объединяет пользовательские сессии, проводимые в нескольких вкладках, в одну запись. Вместо этого, при включении этой опции, сессии, захваченные в разных вкладках браузера, будут записаны в отдельные записи. По умолчанию: `false`.
- `disableStringDict: boolean` Отключает логику словаря строк (для оптимизации хранения) в записях. По умолчанию: `false`.
- `fixedCanvasScaling: boolean` Принудительно отображает изображения canvas с плотностью пикселей 1 вместо devicePixelRatio (снижает потенциальное качество изображения, чтобы уменьшить размер конечного результата). По умолчанию: `false`.
- `disableCanvas?: boolean` Отключает запись элементов canvas. По умолчанию: `false`.
- `assistSocketHost?: string` Может использоваться для установки конкретного хоста для подключения плагина assist. По умолчанию принимает значение `ingestPoint`.

### Конфиденциальность

- `respectDoNotTrack?: boolean` Не запускать трекер, если в браузере пользователя включен флаг "не отслеживать". По умолчанию: `false`.
- `obscureTextEmails?: boolean` Затемняет электронные адреса в текстовых элементах. Электронные адреса будут преобразованы в случайную цепочку звездочек. По умолчанию: `true`.
- `obscureTextNumbers?: boolean` Затемняет числа в текстовых элементах. Числа будут преобразованы в случайную цепочку звездочек. По умолчанию: `false`.
- `obscureInputEmails?: boolean` Затемняет электронные адреса в полях ввода. Значения электронной почты будут преобразованы в случайную цепочку звездочек. По умолчанию: `true`.
- `defaultInputMode?: 0 | 1 | 2` Стандартный режим захвата значений ввода. Соответственно: явный, затемненный или игнорируемый. По умолчанию: `1` (затемненный).

Обратите внимание, что исключенные данные затемняются или подавляются перед отправкой на серверы OpenReplay. Изменения, внесенные в вышеупомянутые опции, не могут быть ретроактивными и будут применяться только к вновь собираемым данным. См. [Санитизация Данных](/installation/sanitize-data) для получения дополнительной информации.

### Консоль

- `consoleMethods?: Array<'log' | 'info' | 'warn' | 'error'  'debug' | 'assert'> | null` Указывает список методов консоли для захвата. По умолчанию: `['log', 'info', 'warn', 'error', 'debug', 'assert']`
- `consoleThrottling?: number` Максимальное количество захватываемых записей консоли в секунду. По умолчанию: `30`.

### Исключения

- `captureExceptions?: boolean` Захват исключений JavaScript и трассировок стека. По умолчанию: `true`.

### Тайминги

- `captureResourceTimings?: boolean` Записывает временные показатели ресурсов. По умолчанию: `true`.
- `capturePageLoadTimings?: boolean` Записывает временные показатели загрузки страницы. По умолчанию: `true`.
- `capturePageRenderTimings?: boolean` Рассчитывает метрики рендеринга страницы, такие как Speed Index, Visually Complete или Time To Interactive. Требует `captureResourceTimings = true`. По умолчанию: `true`.

### Производительность

- `capturePerformance?: boolean` Для захвата метрик производительности, таких как частота кадров, потребление ЦП и памяти. По умолчанию: `true`.

### Сеть

Опция `network` относится к захвату сетевых запросов и полезной нагрузки для `fetch` и `XHR`.

```js
network?: {
    failuresOnly: boolean;
    sessionTokenHeader: string;
    ignoreHeaders: Array<string> | boolean;
    capturePayload: boolean; // make sure you sanitize your data before enabling it
    sanitizer: (RequestResponseData) => RequestResponseData | null;
		captureInIframes: boolean;
  	axiosInstances: AxiosInstance[];
    useProxy?: boolean;
		tokenUrlMatcher?: (url: string) => boolean;
  }
```

Смотрите [Сетевые Опции](/installation/network-options) для примеров и подробностей о том, как редактировать конфиденциальные данные.

### Canvas

Опция `canvas` относится к захвату элементов canvas/WebGL:

```js
canvas?: {
  disableCanvas?: boolean
  fixedCanvasScaling?: boolean
  useAnimationFrame?: boolean
  fileExt?: 'webp' | 'png' | 'jpeg' | 'avif'
}
```

Смотрите [Canvas и WebGL](/installation/canvas) для того, как включить эту возможность, и подробностей о доступных опциях.

### Межсайтовые iFrames

Опция `crossdomain` относится к захвату iFrames с разных доменов. Она используется совместно с опцией `captureIFrames`, которая должна быть установлена в `true`.

```ts 
	crossdomain?: {
		/**
		 * Enable cross-domain tracking
		 * @default false
		 * */
		enabled?: boolean
		/**
		 * Used to specify the parent domain, will be '*' by default
		 * (Check your CSP settings)
		 * @default '*'
		 * */
		parentDomain?: string
	}
```

Смотрите [Отслеживание межсайтовых iFrame](tutorials/crossdomain) для получения дополнительных сведений о том, как захватывать iFrame с другого домена.

### Указатель Мыши

Опция `mouse` относится к захвату селекторов для кликов для создания карт кликов.

```js
mouse?: 
  {
  disableClickmaps?: boolean
  minSelectorDepth?: number
  nthThreshold?: number
  maxOptimiseTries?: number
  }
```

- `disableClickmaps?: boolean` Полностью отключает вычисление селекторов. По умолчанию: `false`.
- `minSelectorDepth?: number` Минимальная длина оптимизированного селектора (по умолчанию 2). Пример: `body > div > div > p => body > p`
- `nthThreshold?: number` Количество попыток селектора перед переходом к селекторам nth-child. Это **дорогостоящая операция** и может привести к значительным накладным расходам, не устанавливайте выше 2000. По умолчанию: `1000`.
- `maxOptimiseTries?: number` Количество попыток оптимизации и укорочения селектора. По умолчанию: `10 000`.

### Переподключения

- `connAttemptCount?: number` Максимальное количество повторных попыток, когда HTTP-запросы трекера не могут достичь бэкенда. По умолчанию: `10`.
- `connAttemptGap?: number` Продолжительность между каждой повторной попыткой (выраженная в мс). По умолчанию: `8000`.

### Feature Flags

- `onFlagsLoad` callback, используемый для выполнения действия после загрузки feature flags (каждый раз).

```ts
 flags?: {
 	onFlagsLoad?: (flags: IFeatureFlag[]) => void
 } 

// ...
interface IFeatureFlag {
  key: string
  is_persist: boolean
  value: string | boolean
  payload: string
}
```

### Безопасность

- `__DISABLE_SECURE_MODE?: boolean` Для разрешения небезопасного соединения между трекером и бэкендом на сайтах без SSL. Это должно использоваться **только в целях разработки**. По умолчанию: `false`.

<Aside type="caution">
    Обратите внимание, что при использовании `__DISABLE_SECURE_MODE` с вашей локальной рабочей станции, вы **можете** заметить визуальные различия при просмотре повторов, например, стили CSS могут загружаться некорректно.
    Для оптимальной записи ваши тесты должны проводиться с публично доступного URL.
</Aside>

## Методы

<div class="grid grid-cols-12 md:grid-cols-12 gap-3 md:gap-4">
  <ORCard title="Узнайте о методах" url="/sdk/methods" hideIcon={true} width="100"/>
</div>
